Fixed h1 Font on Mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,7 +56,7 @@
     }
 
     header img {
-        max-width: 1vw;
+        max-width: 1.5vw;
     }
 
     section {
@@ -545,7 +545,7 @@
         max-width: 22vw;
         border-radius: 10px;
     }
-padding
+
     #motiongraphics li {
         border: 0px solid black;
         width: 35%;
