--- a/styles/style_mobile.css
+++ b/styles/style_mobile.css
@@ -122,7 +122,7 @@
     }
 
     section h1 {
-        font-size: 10vw;
+        font-size: 3em;
     }
 
     section h2 {
